# agenthood

./: .gitattributes  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INITIATION.md  LICENSE  Makefile  README.md  STRUCTURE.md  create-issues.sh  eslint.config.ts  generate_articles.py  oath.md  opencode.json  package-lock.json  package.json  setup.sh  skills.sh.json  tsconfig.json  update-issues.sh
.agenthood/: config.example.json
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: labeler.yml
academy/: index.html
agentic-workflows/: README.md  diagnose-ci-failure.agent.md  review-pr.agent.md  sync-docs.agent.md  triage-issues.agent.md
architecture/: README.md  agent-system.md  concurrency-and-queues.md  provider-failover.md
conventions/: .gitmessage  COMMIT_CONVENTION.md  commitlint.config.cjs  commitlint.config.ts
docs/: release-notes.md  runtime-api.md  runtime-guide.md  runtime-troubleshooting.md  runtime.md
governance/: member-map.md  release-policy.md
intelligence/: README.md
members/: README.md  registry.json
portals/: README.md  github.md  linear.md  slack.md
rituals/: morning-briefing.md  the-watchman.md
runtime/: .env.example  README.md  pyproject.toml
runtime/agenthood_runtime/: __init__.py  cli.py  config.py
runtime/agenthood_runtime/members/: __init__.py  loader.py  registry.py  specs.py
runtime/tests/: test_loader.py  test_registry.py  test_specs.py
scripts/: README.md  build-academy.mjs  (+2 more)
(+422 files in other folders)
