[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthood-runtime"
version = "0.1.0"
description = "Autonomous runtime layer for Agenthood — executes Society members as real LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fabio Ritzel Borges", email = "fritzelborges@gmail.com" }]

dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "deepagents @ git+https://github.com/fworks-tech/deepagents.git@307d59826da9b1ddcbcdab8dccef6d18ecf16d10#subdirectory=libs/deepagents",
]

[project.scripts]
agenthood-run = "agenthood_runtime.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["agenthood_runtime"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
